<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:fillViewport="true"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.sha.kamel.sample.ui.activity.MainActivity"
            android:orientation="vertical"

            >

            <Button
                android:id="@+id/btn_a1"
                android:text="@string/e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a2"
                android:text="@string/e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a3"
                android:text="@string/e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a4"
                android:text="@string/e4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a5"
                android:text="@string/e5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a6"
                android:text="@string/e6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a7"
                android:text="@string/e7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

               <Button
                android:id="@+id/btn_a8"
                android:text="@string/e8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a9"
                android:text="@string/e9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a10"
                android:text="@string/e10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a11"
                android:text="@string/e11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a12"
                android:text="@string/e12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a13"
                android:text="@string/e13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a14"
                android:text="@string/e14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_a15"
                android:text="@string/e15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/mainFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <FrameLayout
            android:id="@+id/anotherFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</ScrollView>
